--- a/notebooks/hnet.ipynb
+++ b/notebooks/hnet.ipynb
@@ -36,7 +36,9 @@
         "id": "bH5Lq4KajjF1"
       },
       "source": [
-        "!pip install hnet"
+        "!pip install -U hnet\n",
+        "import hnet\n",
+        "print(hnet.__version__)"
       ],
       "execution_count": null,
       "outputs": []
@@ -278,7 +280,7 @@
         "ax = hn.heatmap(figsize=(10,10))\n",
         "\n",
         "# Cluster the heatmap:\n",
-        "ax = hn.heatmap(cluster=True, figsize=(10,10))\n"
+        "ax = hn.heatmap(cluster=True, figsize=(10,10))"
       ],
       "execution_count": null,
       "outputs": []
@@ -292,7 +294,7 @@
         "# Plot the heatmap in d3-javascript\n",
         "\n",
         "# Plot the heatmap without ordering:\n",
-        "ax = hn.d3heatmap()\n"
+        "# ax = hn.d3heatmap(vmax=1)"
       ],
       "execution_count": null,
       "outputs": []
@@ -300,107 +302,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bUqEl1sYmIfC",
-        "outputId": "9e888f40-df9a-4772-f0a4-74d245f88fc5",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 50
-        }
+        "id": "bUqEl1sYmIfC"
       },
       "source": [
         "# Save the resuls\n",
         "savepath=hn.save(overwrite=True)"
       ],
-      "execution_count": 86,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[pypickle] Pickle file saved: [hnet_model.pkl]\n",
-            "[hnet] >Saving.. True\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gE8rFORTvieg",
-        "outputId": "238aeea1-8cc1-43b4-b60a-7053c4da80f1",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 877
-        }
+        "id": "gE8rFORTvieg"
       },
       "source": [
         "dir(hn)"
       ],
-      "execution_count": 83,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['__class__',\n",
-              " '__delattr__',\n",
-              " '__dict__',\n",
-              " '__dir__',\n",
-              " '__doc__',\n",
-              " '__eq__',\n",
-              " '__format__',\n",
-              " '__ge__',\n",
-              " '__getattribute__',\n",
-              " '__gt__',\n",
-              " '__hash__',\n",
-              " '__init__',\n",
-              " '__init_subclass__',\n",
-              " '__le__',\n",
-              " '__lt__',\n",
-              " '__module__',\n",
-              " '__ne__',\n",
-              " '__new__',\n",
-              " '__reduce__',\n",
-              " '__reduce_ex__',\n",
-              " '__repr__',\n",
-              " '__setattr__',\n",
-              " '__sizeof__',\n",
-              " '__str__',\n",
-              " '__subclasshook__',\n",
-              " '__weakref__',\n",
-              " '_check_results',\n",
-              " 'alpha',\n",
-              " 'association_learning',\n",
-              " 'black_list',\n",
-              " 'combined_rules',\n",
-              " 'compute_associations',\n",
-              " 'd3graph',\n",
-              " 'd3heatmap',\n",
-              " 'dropna',\n",
-              " 'dtypes',\n",
-              " 'excl_background',\n",
-              " 'fillna',\n",
-              " 'heatmap',\n",
-              " 'import_example',\n",
-              " 'k',\n",
-              " 'load',\n",
-              " 'multtest',\n",
-              " 'perc_min_num',\n",
-              " 'plot',\n",
-              " 'prepocessing',\n",
-              " 'results',\n",
-              " 'save',\n",
-              " 'specificity',\n",
-              " 'white_list',\n",
-              " 'y_min']"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 83
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
