update with feat importance

--- a/notebooks/hnet.ipynb
+++ b/notebooks/hnet.ipynb
@@ -302,6 +302,18 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "bVze_51qu9Ho"
+      },
+      "source": [
+        "# Feature importance\n",
+        "hn.plot_feat_importance()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "bUqEl1sYmIfC"
       },
       "source": [
