update notebook with summarize example

--- a/notebooks/hnet.ipynb
+++ b/notebooks/hnet.ipynb
@@ -314,6 +314,40 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "4s4Eq9Ex7n8G"
+      },
+      "source": [
+        "# Plot summarized results over the categories\n",
+        "\n",
+        "# Make the network plot interactive with d3-javascript\n",
+        "out = hn.d3graph(summarize=True)\n",
+        "\n",
+        "# Plot the heatmap without ordering:\n",
+        "ax = hn.plot(figsize=(10,10), summarize=True)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P0elz2K57zx-"
+      },
+      "source": [
+        "# Plot summarized results over the categories\n",
+        "\n",
+        "# Make the network plot interactive with d3-javascript\n",
+        "out = hn.d3heatmap(summarize=True)\n",
+        "\n",
+        "# Plot the heatmap without ordering:\n",
+        "ax = hn.heatmap(figsize=(10,10), summarize=True)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "bUqEl1sYmIfC"
       },
       "source": [
