--- a/notebooks/hnet.ipynb
+++ b/notebooks/hnet.ipynb
@@ -191,7 +191,7 @@
       },
       "source": [
         "# Learn its associations\n",
-        "results = hn.association_learning(df)"
+        "results = hn.association_learning(df, verbose=4)"
       ],
       "execution_count": null,
       "outputs": []
@@ -340,7 +340,7 @@
         "out = hn.d3heatmap(summarize=True)\n",
         "\n",
         "# Plot the heatmap without ordering:\n",
-        "ax = hn.heatmap(figsize=(10,10), summarize=True)\n"
+        "ax = hn.heatmap(figsize=(10,10), summarize=True, cluster=True)\n"
       ],
       "execution_count": null,
       "outputs": []
