some code cleaning and pyvis example in colab

--- a/notebooks/hnet.ipynb
+++ b/notebooks/hnet.ipynb
@@ -320,7 +320,7 @@
         "# Plot summarized results over the categories\n",
         "\n",
         "# Make the network plot interactive with d3-javascript\n",
-        "out = hn.d3graph(summarize=True)\n",
+        "graph = hn.d3graph(summarize=True)\n",
         "\n",
         "# Plot the heatmap without ordering:\n",
         "ax = hn.plot(figsize=(10,10), summarize=True)\n"
@@ -367,6 +367,58 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YEnHbaDKRTkX"
+      },
+      "source": [
+        "**Lets make an interactive and responsive network using pyvis**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BgyKAtQtRXU_"
+      },
+      "source": [
+        "!pip install pyvis\n",
+        "from pyvis import network as net\n",
+        "from IPython.core.display import display, HTML\n",
+        "from hnet.network import adjmat2graph"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XeeMghaaS2-2"
+      },
+      "source": [
+        "# Convert adjacency matrix into Networkx Graph\n",
+        "G=adjmat2graph(hn.results['simmatLogP'])\n",
+        "# Setup of the interactive network figure\n",
+        "g = net.Network(height='800px', width='80%',notebook=True,heading='HNET association Network')\n",
+        "g.from_nx(G)\n",
+        "# Create advanced buttons\n",
+        "g.show_buttons(filter_=['physics'])\n",
+        "# Display\n",
+        "g.show('hnet.html')\n",
+        "display(HTML('hnet.html'))\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "R5zSB8qNW0QH"
+      },
+      "source": [
+        "Fin"
+      ]
     }
   ]
 }
