--- a/notebooks/hnet.ipynb
+++ b/notebooks/hnet.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "hnet.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -19,15 +17,91 @@
         "id": "H2c0lF4kjpeX"
       },
       "source": [
-        "**HNet** stands for ***graphical Hypergeometric Networks***, which is a method where associations across variables are tested for significance by statistical inference.\n",
+        "<!-- Centered logo -->\n",
+        "<p align=\"center\">\n",
+        "  <img src=\"https://github.com/erdogant/hnet/blob/master/docs/figs/logo.png?raw=true\" width=\"400\" />\n",
+        "</p>\n",
+        "\n",
+        "<!-- Badges row (centered) -->\n",
+        "<p align=\"center\">\n",
+        "  <a href=\"https://img.shields.io/pypi/pyversions/hnet\"><img src=\"https://img.shields.io/pypi/pyversions/hnet\" /></a>\n",
+        "  <a href=\"https://pypi.org/project/hnet/\"><img src=\"https://img.shields.io/pypi/v/bnlearn\" /></a>\n",
+        "  <img src=\"https://img.shields.io/github/stars/erdogant/hnet\" />\n",
+        "  <a href=\"https://github.com/erdogant/hnet/blob/master/LICENSE\"><img src=\"https://img.shields.io/badge/license-MIT-green.svg\" /></a>\n",
+        "  <a href=\"https://github.com/erdogant/hnet/network\"><img src=\"https://img.shields.io/github/forks/erdogant/hnet.svg\" /></a>\n",
+        "  <a href=\"https://github.com/erdogant/hnet/issues\"><img src=\"https://img.shields.io/github/issues/erdogant/hnet.svg\" /></a>\n",
+        "  <a href=\"http://www.repostatus.org/#active\"><img src=\"http://www.repostatus.org/badges/latest/active.svg\" /></a>\n",
+        "  <a href=\"https://pepy.tech/project/hnet/\"><img src=\"https://pepy.tech/badge/hnet/month\" /></a>\n",
+        "  <a href=\"https://pepy.tech/project/hnet/\"><img src=\"https://pepy.tech/badge/hnet\" /></a>\n",
+        "  <a href=\"https://zenodo.org/badge/latestdoi/231263493\"><img src=\"https://zenodo.org/badge/231263493.svg\" /></a>\n",
+        "  <a href=\"https://erdogant.github.io/hnet/\"><img src=\"https://img.shields.io/badge/Sphinx-Docs-Green\" /></a>\n",
+        "  <a href=\"https://erdogant.github.io/bnlearn/pages/html/Documentation.html#medium-blog\"><img src=\"https://img.shields.io/badge/Medium-Blog-black\" /></a>\n",
+        "  <img src=\"https://img.shields.io/github/repo-size/erdogant/hnet\" />\n",
+        "  <a href=\"https://erdogant.github.io/bnlearn/pages/html/Documentation.html#\"><img src=\"https://img.shields.io/badge/Support%20this%20project-grey.svg?logo=github%20sponsors\" /></a>\n",
+        "  <a href=\"https://erdogant.github.io/hnet/pages/html/Documentation.html#colab-notebook\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" /></a>\n",
+        "</p>\n",
+        "\n",
+        "---\n",
+        "\n",
+        "# hnet\n",
+        "\n",
+        "**HNet** stands for ***graphical Hypergeometric Networks***, which is a method where associations across variables are tested for significance by statistical inference. ⭐️Star it if you like it⭐️\n",
+        "\n",
+        "---\n",
         "\n",
         "Real-world data often contain measurements with both continuous and discrete values. Despite the availability of many libraries, data sets with mixed data types require intensive pre-processing steps, and it remains a challenge to describe the relationships between variables. The data understanding phase is crucial to the data-mining process, however, without making any assumptions on the data, the search space is super-exponential in the number of variables. A thorough data understanding phase is therefore not common practice.\n",
         "\n",
-        "The **aim** is to determine a network with significant associations that can shed light on the complex relationships across variables. Input datasets can range from generic dataframes to nested data structures with lists, missing values and enumerations.\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Core functionalities:\n",
+        "\n",
+        "| Feature | Description |\n",
+        "|--------|-------------|\n",
+        "| [**Parametric Fitting**](https://erdogant.github.io/hnet/pages/html/Parametric.html) | Fit distributions on empirical data X. |\n",
+        "| [**Non-Parametric Fitting**](https://erdogant.github.io/hnet/pages/html/Quantile.html) | Fit distributions on empirical data X using non-parametric approaches (quantile, percentiles). |\n",
+        "| [**Discrete Fitting**](https://erdogant.github.io/hnet/pages/html/Discrete.html) | Fit distributions on empirical data X using binomial distribution. |\n",
+        "| [**Predict**](https://erdogant.github.io/hnet/pages/html/Functions.html#module-hnet.hnet.hnet.predict) | Compute probabilities for response variables y. |\n",
+        "| [**Synthetic Data**](https://erdogant.github.io/hnet/pages/html/Generate.html) |  Generate synthetic data. |\n",
+        "| [**Plots**](https://erdogant.github.io/hnet/pages/html/Plots.html) | Varoius plotting functionalities. |\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### Support\n",
+        "* This library is for <b>free</b> but improvements and new functionalities are made using coffee! :)\n",
+        "\n",
+        "* You can also [support](https://erdogant.github.io/hnet/pages/html/Documentation.html) in various other ways, have a look at the [sponser page](https://erdogant.github.io/bnlearn/pages/html/Documentation.html).\n",
+        "\n",
+        "* Report bugs, issues and feature extensions at [github page](https://github.com/erdogant/bnlearn).\n",
+        "\n",
+        "<table>\n",
+        "  <tr>\n",
+        "    <td style=\"text-align: center;\">\n",
+        "      <a href=\"https://www.buymeacoffee.com/erdogant\">\n",
+        "        <img src=\"https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=erdogant&button_colour=FFDD00&font_colour=000000&font_family=Cookie&outline_colour=000000&coffee_colour=ffffff\" />\n",
+        "      </a>\n",
+        "    </td>\n",
+        "    <td style=\"text-align: center;\">\n",
+        "      <a href=\"https://erdogant.medium.com/subscribe\" target=\"_blank\">\n",
+        "        <img height=\"50\" style=\"border:0px;height:36px;\" src=\"https://erdogant.github.io/images/medium_follow_me.jpg\" border=\"0\" alt=\"Follow me on Medium\" />\n",
+        "      </a>\n",
+        "    </td>\n",
+        "  </tr>\n",
+        "</table>\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### Blog Posts with Podcast\n",
+        "- [**Medium**](https://erdogant.github.io/hnet/pages/html/Documentation.html#medium-blogs)\n",
+        "- [**Gumroad with podcast**](https://erdogant.github.io/hnet/pages/html/Documentation.html#gumroad-products-with-podcasts)\n",
+        "- [**Article**](https://arxiv.org/abs/2005.04679)\n",
         "\n",
         "* [API Documentation](https://erdogant.github.io/hnet/)\n",
-        "* [Article]( https://arxiv.org/abs/2005.04679)\n",
-        "* [Github]( https://github.com/erdogant/hnet)\n"
+        "* [Github]( https://github.com/erdogant/hnet)\n",
+        "\n",
+        "\n",
+        "-------------\n"
       ]
     },
     {
@@ -160,7 +234,7 @@
         "id": "wxKnPgPW3g7h"
       },
       "source": [
-        "# Initialize model with variable fnlwgt in the black-list. This means that it is not included in the modelling. \n",
+        "# Initialize model with variable fnlwgt in the black-list. This means that it is not included in the modelling.\n",
         "hn = hnet(black_list=['fnlwgt'])"
       ],
       "execution_count": null,
@@ -191,7 +265,7 @@
       },
       "source": [
         "# Learn its associations\n",
-        "results = hn.association_learning(df, verbose=4)"
+        "results = hn.association_learning(df)"
       ],
       "execution_count": null,
       "outputs": []
@@ -224,9 +298,9 @@
         "id": "gkTR_qFG6TWd"
       },
       "source": [
-        "## Plotting \n",
+        "## Plotting\n",
         "\n",
-        "There are many possibilities regarding plotting the results. \n",
+        "There are many possibilities regarding plotting the results.\n",
         "There are ***static*** plots, and ***dynamic*** plots. In case of using colab, the dynamic plots will not work as it requires writing d3-javascript files to disk. The following functions are available for plotting:\n",
         "\n",
         "#### Network-graph\n",
